Added comments to frmSetup.vb, removed unneeded handler for FileToolStripMenuItem_Click(), added comments for SetupToolStripMenuItem_Click(), Added clsPipeManager.vb to manage a single CNC Pipe for the entire application instead of initializing a pipe for frmMeasureDoor.vb and a pipe for frmSetup.vb, added new icon, added graphic to frmMeasureDoor.vb

--- a/CentroidAPI_VBnet_PowerFeed/CentroidAPI_VBnet_PowerFeed.vbproj
+++ b/CentroidAPI_VBnet_PowerFeed/CentroidAPI_VBnet_PowerFeed.vbproj
@@ -8,7 +8,7 @@
     <MyType>WindowsForms</MyType>
     <Platforms>AnyCPU;x64</Platforms>
     <ImportedNamespaces>CentroidAPI=False,System.Data=False,System.Drawing=False,System.Windows.Forms=False,Microsoft.VisualBasic=True,System=True,System.Collections=True,System.Collections.Generic=True,System.Diagnostics=True,System.Linq=True,System.Xml.Linq=True,System.Threading.Tasks=True,CentroidAPI_VBnet_XMoveApp=True</ImportedNamespaces>
-    <ApplicationIcon>door.ico</ApplicationIcon>
+    <ApplicationIcon>power_feed_icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="door.ico" />
+    <Content Include="power_feed_icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
